--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-
+    id 'kotlin-kapt'
 }
 
 android {
@@ -66,5 +66,10 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.7.1"
     implementation "androidx.navigation:navigation-ui-ktx:2.7.1"
+
+    def room_version = "2.5.2"
+    implementation("androidx.room:room-runtime:$room_version")
+    kapt("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-ktx:$room_version")
 
 }
